# JumaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  JumaEngine.sln  LICENSE  Makefile
JumaEngine/: JumaEngine.vcxproj  JumaEngine.vcxproj.filters  main.cpp
JumaEngine/source/: Engine.cpp  Engine.h  EngineContextObject.cpp  EngineContextObject.h  EngineObjectClass.cpp  EngineObjectClass.h  common_header.h  enabled_engine_parts.h  libs_using.h
JumaEngine/source/asset/: AssetObject.cpp  AssetObject.h  AssetsManager.cpp  AssetsManager.h
JumaEngine/source/engine/: ActionTask.h  Engine.cpp  Engine.h  EngineContextObject.cpp  EngineContextObject.h  EngineObjectClass.h  EngineOld.cpp  math_consts.h  math_functions.cpp  math_functions.h  system_functions.cpp  system_functions.h
JumaEngine/source/render/: IRenderInterface.h  IRenderObject.h  RenderAPI.h  RenderManager.cpp  RenderManager.h  RenderManagerBase.cpp  RenderManagerBase.h  RenderManagerBase_OpenGL.cpp  RenderManagerBase_OpenGL.h  RenderManagerImpl.h  RenderManagerOpenGL.cpp  RenderManagerOpenGL.h  RenderManager_OpenGL.cpp  RenderManager_OpenGL.h  RenderManager_OpenGL_GLFW.cpp  RenderManager_OpenGL_GLFW.h  RenderedObject.h  WindowDescriptionBase.h  WindowDescriptionGLFW.h
JumaEngine/source/subsystems/: AsyncTasksSubsystem.cpp  AsyncTasksSubsystem.h  GlobalMaterialParamsSubsystem.cpp  GlobalMaterialParamsSubsystem.h  SubsystemBase.cpp  SubsystemBase.h
JumaEngine/source/transform/: Rotation.cpp  Rotation.h  Transform.h
JumaEngine/source/utils/: SystemFunctions.cpp  SystemFunctions.h  id_generator.h  int_defines.h  jarray.h  jdelegate.h  jdelegate_multicast.h  jlog.cpp  jlog.h  jmap.h  jmap_auto_id.h  jmutex_shared.h  jset.h  jshared_ptr.h  jstring.h  jsubclass.h  log.cpp  log.h  math.h  math_consts.h  math_functions.cpp  math_functions.h  subclass.h  system_functions.cpp  system_functions.h  type_checks.h  type_traits_macros.h
JumaEngine/source/window/: WindowBase.cpp  WindowBase.h  WindowGLFW.cpp  WindowGLFW.h
JumaEngineContent/: CMakeLists.txt
JumaEngineContent/include/JumaEngineContent/: core.h  shaders.h
JumaEngineContent/src/: main.cpp  shaders.cpp
content_engine/materials/: M_widgetDefault.json  M_widgetSolidColor.json
content_engine/shaders/: .gitignore  compile_all.js  widgetDefault.frag  widgetDefault.json  widgetDefault.vert  widgetDefaultInverted.vert  widgetSolidColor.frag  widgetSolidColor.json  widgetSolidColor.vert  widgetSolidColorInverted.vert
include/JumaEngine/: Engine.h  EngineBase.h  EngineClass.h  EngineContextObject.h  EngineObject.h  EngineSubsystem.h  GameEngine.h  GameEngineBase.h  GameInstance.h  IEngineObjectOwner.h  ILogicObjectOwner.h  LogicObject.h  ShadersSubsystem.h  core.h
include/JumaEngine/assets/: Asset.h  AssetType.h  AssetsEngineSubsystem.h  Material.h  MaterialBase.h  MaterialInstance.h  MaterialParamType.h  Mesh.h  Shader.h  Texture.h  TextureBase.h  VertexBuffer.h  VertexComponent.h
include/JumaEngine/engine/: AsyncEngineSubsystem.h  ConfigEngineSubsystem.h  Engine.h  EngineClass.h  EngineContextObject.h  EngineObject.h  EngineObjectOwner.h  EngineObjectPtr.h  EngineSubsystem.h  GameEngine.h  GameInstance.h  IEngineObjectOwner.h
include/JumaEngine/game/: GameEngine.h  GameInstance.h
include/JumaEngine/render/: RenderContext.h  RenderEngineSubsystem.h  RenderTarget.h
include/JumaEngine/subsystems/: EngineSubsystem.h
include/JumaEngine/widgets/: CursorWidget.h  IWidgetContainer.h  ImageWidget.h  OverlayWidget.h  Widget.h  WidgetAlignment.h  WidgetContainer.h  WidgetContext.h  WidgetsCreator.h
lib/: .gitignore  Assimp.props  DevIL.props  GLEW.props  GLFW.props  GLM.props  VMA.props  irrXML.props  libs.props
src/: Engine.cpp  EngineBase.cpp  EngineContextObject.cpp  EngineObject.cpp  EngineSubsystem.cpp  GameEngine.cpp  GameEngineBase.cpp  GameInstance.cpp  IEngineObjectOwner.cpp  ILogicObjectOwner.cpp  LogicObject.cpp  ShadersSubsystem.cpp
src/assets/: AssetFilesParsing.cpp  AssetFilesParsing.h  AssetsEngineSubsystem.cpp  Material.cpp  MaterialBase.cpp  MaterialInstance.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/engine/: AsyncEngineSubsystem.cpp  ConfigEngineSubsystem.cpp  Engine.cpp  EngineContextObject.cpp  EngineObject.cpp  EngineObjectOwner.cpp  EngineObjectPtr.cpp  GameEngine.cpp  GameInstance.cpp  IEngineObjectOwner.cpp
src/game/: GameEngine.cpp  GameInstance.cpp
src/render/: RenderEngineSubsystem.cpp  RenderTarget.cpp
src/subsystems/: EngineSubsystem.cpp
src/subsystems/meshes/: Mesh.cpp  MeshesSubsystem.cpp
src/widgets/: CursorWidget.cpp  IWidgetContainer.cpp  ImageWidget.cpp  OverlayWidget.cpp  Widget.cpp  WidgetContainer.cpp  WidgetContext.cpp  WidgetsCreator.cpp
(+416 files in other folders)
